# deckocr

./: Cargo.toml  README.md
assets/controller_icons/: LICENSE  README.md  attribution.txt
src/: config.rs  dictionary_service.rs  gui.rs  main.rs  ocr_service.rs  ocr_window.rs  service.rs  services.rs  word.rs
src/dictionary_service/: jpdb.rs
src/gui/: config_window.rs  ocr_window.rs  popups.rs
src/gui/ocr_window/: input_state.rs  text_with_ruby_widget.rs
src/ocr_service/: owocr.rs
src/ocr_window/: text_with_ruby_widget.rs
src/service/: dictionary.rs  ocr.rs  srs.rs
src/service/dictionary/: jpdb.rs  jpdb_dictionary.rs
src/service/ocr/: owocr.rs
src/service/srs/: jpdb.rs  jpdb_srs.rs
src/services/: dictionary.rs  ocr.rs  srs.rs
src/services/dictionary/: jpdb_dictionary.rs
src/services/ocr/: owocr.rs
src/services/srs/: jpdb_srs.rs
