[package]
name = "deckocr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
attohttpc = { version = "0.29.2", features = ["json"] }
dirs = "6.0.0"
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["svg"] }
gilrs = "0.11.0"
global-hotkey = "0.6.4"
image = { version = "0.25.6", features = ["png"] }
log = "0.4.27"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tungstenite = "0.26.2"
xcap = "0.4.1"
